--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FortuNexTread</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
     <nav>
         <div class="nav_header">
             <div class="nav_logo">
-                <a href="#">FORTUNEXTREAD</a>
+                <a href="#">FortuneNexTread</a>
             </div>
 
             <div class="nav_menu_btn" id="nav_menu_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
-        <ul class="nav-links" id="nav-links">
+        <ul class="nav_links" id="nav_links">
             <li><a href="#catalogue">CATALOGUE</a></li>
             <li><a href="#fashion">FASHION</a></li>
             <li><a href="#favorite">FAVORITE</a></li>
@@ -29,5 +30,6 @@
         </ul>
     </nav>
     
+    <script src="src/main.js"></script>
 </body>
 </html>
