--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
             </li>
         </ul>
     </nav>
+
+    <header>
+        <div class="section_header header_container">
+            <div class="header_content">
+                <h1>
+                    <span>LET'S</span>
+                    <br>
+                    EXPLORE
+                    <br>
+                    <span>UNIQUE</span>
+                    <br>
+                    STYLES
+                </h1>
+                <p>Live for influential and innovate fashion</p>
+                <div class="header_btns">
+                    <button class="btn">Shop Now</button>
+                </div>
+            </div>
+
+            <div class="header_image">
+                <img src="images/header.png" alt="header image">
+            </div>
+        </div>
+    </header>
     
     <script src="src/main.js"></script>
 </body>
