--- a/index.html
+++ b/index.html
@@ -53,7 +53,72 @@
             </div>
         </div>
     </header>
-    
+    <section class="section_container arrival_container" id="catalogue">
+        <h2 class="section_header">NEW ARRIVALS</h2>
+        <div class="arrival_grid">
+            <div class="arrival_card">
+                <div class="arrival_image">
+                    <img src="images/arrival-1.jpg" alt="arrival">
+                </div>
+                <div class="arrival_content">
+                    <div>
+                        <h4>Hoodies & Sweatshirts</h4>
+                        <a href="#">Explore Now</a>
+                    </div>
+                    <span><!-- Place fa arrow right --></span>
+                </div>
+            </div>
+
+             <div class="arrival_card">
+                <div class="arrival_image">
+                    <img src="images/arrival-2.jpg" alt="arrival">
+                </div>
+                <div class="arrival_content">
+                    <div>
+                        <h4>Coats & Parkas</h4>
+                        <a href="#">Explore Now</a>
+                    </div>
+                    <span><!-- Place fa arrow right --></span>
+                </div>
+            </div>
+
+             <div class="arrival_card">
+                <div class="arrival_image">
+                    <img src="images/arrival-3.jpg" alt="arrival">
+                </div>
+                <div class="arrival_content">
+                    <div>
+                        <h4>Tees & T-Shirts</h4>
+                        <a href="#">Explore Now</a>
+                    </div>
+                    <span><!-- Place fa arrow right --></span>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="sale" id="fashion">
+        <div class="section_container sale_container">
+            <div class="sale_image">
+                <img src="images/sale.png" alt="sale">
+            </div>
+            <div class="sale_content">
+                <h2><span>PAYDAY</span><br>SALE NOW</h2>
+                <p>
+                    Spend a minimum of R500 and get 40% off discount for your next purchase
+                </p>
+                <h4>01 Nov - 05 Dec 2024</h4>
+                <p>Terms and Conditions Apply</p>
+                <div class="sale_btn">
+                    <button class="btn">Shop Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="src/main.js"></script>
 </body>
 </html>
