--- a/index.html
+++ b/index.html
@@ -118,6 +118,38 @@
         </div>
     </section>
 
+    <section class="section_container favourite_container" id="favourite">
+        <h2 class="section_header">KID'S FAVORITE</h2>
+        <div class="favourite_grid">
+            <div class="favourite_card">
+                <div class="favourite_image">
+                    <img src="images/favorite-1.jpg" alt="favorite">
+                </div>
+                <div class="favorite_content">
+                    <div>
+                        <h4>Trending</h4>
+                        <a href="#">Explore Now</a>
+                    </div>
+                    <span><!-- Right arrow here --></span>
+                </div>
+            </div>
+
+            <div class="favourite_card">
+                <div class="favourite_image">
+                    <img src="images/favorite-2.jpg" alt="favorite">
+                </div>
+                <div class="favorite_content">
+                    <div>
+                        <h4>All under R60</h4>
+                        <a href="#">Explore Now</a>
+                    </div>
+                    <span><!-- Right arrow here --></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section_container download_container" id="lifestyle"></section>
 
     <script src="src/main.js"></script>
 </body>
