Finish up promo and footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="nav_header">
             <div class="nav_logo">
-                <a href="#">FortuneNexTread</a>
+                <a href="#">FortuNexTread</a>
             </div>
 
             <div class="nav_menu_btn" id="nav_menu_btn">
@@ -149,8 +149,79 @@
         </div>
     </section>
 
-    <section class="section_container download_container" id="lifestyle"></section>
+    <section class="section_container download_container" id="lifestyle">
+        <div class="download_image">
+            <img src="images/download.png" alt="download">
+        </div>
+        <div class="download_content">
+            <h2 class="section_header">DOWNLOAD THE APP & GET THE DISCOUNT</h2>
+            <p>Get 40% off your first purchase using our mobile app</p>
+            <div class="download_links">
+                <a href="#">
+                    <img src="images/istore" alt="istore">
+                </a>
+                <a href="#">
+                    <img src="images/googleplay" alt="google playstore">
+                </a>
+            </div>
+        </div>
+    </section>
 
+    <section class="promo">
+        <div class="section_container promo_container">
+            <h2 class="section_header">JOIN OUR COMMUNITY TO GET MONTHLY DISCOUNTS</h2>
+            <p>Provide your email below</p>
+            <form action="/">
+                <input type="text" placeholder="Type your email here">
+                <button class="btn">SEND</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="section_container footer_container">
+            <div class="footer_col">
+                <div class="footer_logo">
+                    <a href="#">FortuNexTread</a>
+                </div>
+                <p>Complete your style with awesome clothes from us.</p>
+                <ul class="footer_socials">
+                    <li><a href="#"><!--Facebook link--></a></li>
+                    <li><a href="#"><!--Facebook link--></a></li>
+                    <li><a href="#"><!--Facebook link--></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer_col">
+            <h4>Company</h4>
+            <ul class="footer_links">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </div>
+
+        <div class="footer_col">
+            <h4>Quick Links</h4>
+            <ul class="footer_links">
+                <li><a href="#">Store Location</a></li>
+                <li><a href="#">Order Tracking</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="footer_col">
+            <h4>Legal</h4>
+            <ul class="footer_links">
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+
+        <div class="footer_bar">
+            Copyright 2024 Fortune Mahloane. All rights reserved.
+        </div>
+    </footer>
     <script src="src/main.js"></script>
 </body>
 </html>
