add images, update links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="header_image">
-                <img src="images/header.png" alt="header image">
+                <img src="images/header.jpg" alt="header image">
             </div>
         </div>
     </header>
@@ -58,40 +58,43 @@
         <div class="arrival_grid">
             <div class="arrival_card">
                 <div class="arrival_image">
-                    <img src="images/arrival-1.jpg" alt="arrival">
+                    <img src="images/hoodies.jpg" alt="arrival">
                 </div>
                 <div class="arrival_content">
                     <div>
                         <h4>Hoodies & Sweatshirts</h4>
                         <a href="#">Explore Now</a>
                     </div>
-                    <span><!-- Place fa arrow right --></span>
+                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+</span>
                 </div>
             </div>
 
              <div class="arrival_card">
                 <div class="arrival_image">
-                    <img src="images/arrival-2.jpg" alt="arrival">
+                    <img src="images/suits.jpg" alt="arrival">
                 </div>
                 <div class="arrival_content">
                     <div>
-                        <h4>Coats & Parkas</h4>
+                        <h4>Suits</h4>
                         <a href="#">Explore Now</a>
                     </div>
-                    <span><!-- Place fa arrow right --></span>
+                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+</span>
                 </div>
             </div>
 
              <div class="arrival_card">
                 <div class="arrival_image">
-                    <img src="images/arrival-3.jpg" alt="arrival">
+                    <img src="images/t-shirts.jpg" alt="arrival">
                 </div>
                 <div class="arrival_content">
                     <div>
                         <h4>Tees & T-Shirts</h4>
                         <a href="#">Explore Now</a>
                     </div>
-                    <span><!-- Place fa arrow right --></span>
+                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+</span>
                 </div>
             </div>
         </div>
@@ -102,7 +105,7 @@
     <section class="sale" id="fashion">
         <div class="section_container sale_container">
             <div class="sale_image">
-                <img src="images/sale.png" alt="sale">
+                <img src="images/sale.jpg" alt="sale">
             </div>
             <div class="sale_content">
                 <h2><span>PAYDAY</span><br>SALE NOW</h2>
@@ -123,27 +126,29 @@
         <div class="favourite_grid">
             <div class="favourite_card">
                 <div class="favourite_image">
-                    <img src="images/favorite-1.jpg" alt="favorite">
+                    <img src="images/kids-1.jpg" alt="favorite">
                 </div>
                 <div class="favorite_content">
                     <div>
                         <h4>Trending</h4>
                         <a href="#">Explore Now</a>
                     </div>
-                    <span><!-- Right arrow here --></span>
+                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+</span>
                 </div>
             </div>
 
             <div class="favourite_card">
                 <div class="favourite_image">
-                    <img src="images/favorite-2.jpg" alt="favorite">
+                    <img src="images/kids-2.jpg" alt="favorite">
                 </div>
                 <div class="favorite_content">
                     <div>
                         <h4>All under R60</h4>
                         <a href="#">Explore Now</a>
                     </div>
-                    <span><!-- Right arrow here --></span>
+                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i>
+</span>
                 </div>
             </div>
         </div>
@@ -151,17 +156,14 @@
 
     <section class="section_container download_container" id="lifestyle">
         <div class="download_image">
-            <img src="images/download.png" alt="download">
+            <img src="images/download.jpg" alt="download">
         </div>
         <div class="download_content">
             <h2 class="section_header">DOWNLOAD THE APP & GET THE DISCOUNT</h2>
             <p>Get 40% off your first purchase using our mobile app</p>
             <div class="download_links">
                 <a href="#">
-                    <img src="images/istore" alt="istore">
-                </a>
-                <a href="#">
-                    <img src="images/googleplay" alt="google playstore">
+                    <img src="images/google.jpg" alt="google play store">
                 </a>
             </div>
         </div>
@@ -186,9 +188,11 @@
                 </div>
                 <p>Complete your style with awesome clothes from us.</p>
                 <ul class="footer_socials">
-                    <li><a href="#"><!--Facebook link--></a></li>
-                    <li><a href="#"><!--Facebook link--></a></li>
-                    <li><a href="#"><!--Facebook link--></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+</a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+</a></li>
+                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -222,6 +226,8 @@
             Copyright 2024 Fortune Mahloane. All rights reserved.
         </div>
     </footer>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
