--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FortuNexTread</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -121,11 +122,11 @@
         </div>
     </section>
 
-    <section class="section_container favourite_container" id="favourite">
+    <section class="section_container favorite_container" id="favorite">
         <h2 class="section_header">KID'S FAVORITE</h2>
-        <div class="favourite_grid">
-            <div class="favourite_card">
-                <div class="favourite_image">
+        <div class="favorite_grid">
+            <div class="favorite_card">
+                <div class="favorite_image">
                     <img src="images/kids-1.jpg" alt="favorite">
                 </div>
                 <div class="favorite_content">
@@ -138,8 +139,8 @@
                 </div>
             </div>
 
-            <div class="favourite_card">
-                <div class="favourite_image">
+            <div class="favorite_card">
+                <div class="favorite_image">
                     <img src="images/kids-2.jpg" alt="favorite">
                 </div>
                 <div class="favorite_content">
@@ -161,11 +162,6 @@
         <div class="download_content">
             <h2 class="section_header">DOWNLOAD THE APP & GET THE DISCOUNT</h2>
             <p>Get 40% off your first purchase using our mobile app</p>
-            <div class="download_links">
-                <a href="#">
-                    <img src="images/google.jpg" alt="google play store">
-                </a>
-            </div>
         </div>
     </section>
 
@@ -189,10 +185,12 @@
                 <p>Complete your style with awesome clothes from us.</p>
                 <ul class="footer_socials">
                     <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-</a></li>
+
                     <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-</a></li>
-                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+
+                    <li><a href="#"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+
+                   
                 </ul>
             </div>
         </div>
